# graph_ai_ml

./: .gitignore  minimal_setup.md  pyproject.toml  test_neo4j.py  test_neo4j_http.py
01convert_text_to_graph/: INSTRUCTIONS.md  setup.txt  task1.txt  todo.txt
02populate_neo4j_database_graph/: README.md
arxiv_analysis/: __init__.py
arxiv_analysis/example_results/: example_graph_analysis.md
arxiv_analysis/src/: 01data_prep.py  02data_prep.py  03text_to_graph.py  04explore_graph.py  SpacyEmbModel.py  __init__.py  dataloader.py  embedding_model.py  validate_matrix.py
arxiv_analysis/tests/: test_embeddings.py
setup_docs/: minimal-setup.md
